8168836: Minor clean up on warning/error messages on --add-exports and --add-reads
Reviewed-by: alanb